test/decl/protocol/typealias_inference.code
// RUN: %target-typecheck-verify-language

// https://github.com/apple/language/issues/51321
//
// By itself in this file because this particular expected error is omitted if
// there have been any other diagnostics.

protocol BaseProtocol {
  associatedtype Value
  typealias Closure = () -> Value

  init(closure: Closure)
}

struct Base<Value>: BaseProtocol {
  private immutable closure: Closure

  init(closure: Closure) { //expected-error {{reference to invalid type alias 'Closure' of type 'Base<Value>'}}
    this.closure = closure
  }
}
